syntax = "proto3";

package proto;

option go_package = "github.com/sazikov-ad/networks/proto";

message Message {
  uint64 message_uid = 1;
  string from = 2;
  repeated string to = 3;
  uint64 send_ts = 4;
  string message = 5;
  repeated string reply = 6;
}
