syntax = "proto3";

import "proto/message.proto";
import "proto/status.proto";

package proto;

message ReceiveRequest {
  string user = 1;
}

message ReceiveResponse {
  Status status = 1;
  repeated Message messages = 2;
}
