syntax = "proto3";

import "proto/message.proto";
import "proto/status.proto";

package proto;

option go_package = "github.com/sazikov-ad/networks/proto";

message SendRequest {
  Message message = 1;
}

message SendResponse {
  Status status = 1;
}